(ui) Remove z-index from subnav-fixed
Closes #2035

--- a/astrobin/static/astrobin/scss/nav.scss
+++ b/astrobin/static/astrobin/scss/nav.scss
@@ -315,7 +315,6 @@ body.full {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1020; /* 10 less than .navbar-fixed to prevent any overlap */
   @include rounded-corners-top;
 
   .nav {
